@@ -23,10 +23,10 @@ import java.util.Vector;
 
 import com.dawg6.d3api.shared.Account;
 import com.dawg6.d3api.shared.Leaderboard;
-import com.dawg6.d3api.shared.LeaderboardData;
 import com.dawg6.d3api.shared.LeaderboardRow;
 import com.dawg6.d3api.shared.Realm;
 import com.dawg6.d3api.shared.SeasonIndex;
+import com.dawg6.d3api.shared.Util;
 import com.dawg6.gwt.client.ApplicationPanel;
 import com.dawg6.gwt.common.util.DefaultCallback;
 import com.dawg6.web.dhcalc.shared.calculator.LeaderboardType;
@@ -54,7 +54,7 @@ public class LeaderboardPanel extends ApplicationPanel {
 	private final FlexTable table;
 	private final int leaderboardRow;
 	private ListBox leaders;
-	
+
 	public LeaderboardPanel(MainPanel mainPanel) {
 
 		this.mainPanel = mainPanel;
@@ -68,198 +68,198 @@ public class LeaderboardPanel extends ApplicationPanel {
 
 		table.setWidget(row, 2, new Label("Hardcore:", false));
 		table.setWidget(row, 3, hardcore);
-		
+
 		table.setWidget(row, 4, new Label("Leaderboard:", false));
 		table.setWidget(row, 5, leaderboard);
 		row++;
 
 		Button button = new Button("Get Leaderboard");
-		button.addClickHandler(new ClickHandler(){
+		button.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				getLeaderboard();
-				
-			}});
-		
+
+			}
+		});
+
 		table.setWidget(row, 0, button);
 
 		Anchor anchor = new Anchor("battle.net");
 		anchor.setHref("javascript:void(0)");
-		anchor.addClickHandler(new ClickHandler(){
+		anchor.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				leaderboardLink();
-			}});
+			}
+		});
 
 		table.setWidget(row, 1, anchor);
-		
+
 		row++;
-		
+
 		for (LeaderboardType t : LeaderboardType.values()) {
 			leaderboard.addItem(t.toString(), t.name());
 		}
-		
+
 		leaderboard.setSelectedIndex(0);
 		leaderboardRow = row;
 
-		
 	}
 
 	protected void leaderboardLink() {
 		Realm realm = mainPanel.getSelectedRealm();
 		Integer season = getSelectedSeason();
 		LeaderboardType type = getSelectedLeaderboard();
-		
+
 		if ((realm != null) && (season != null) && (type != null)) {
 			boolean hardcore = this.hardcore.getValue();
 			String which = type.getKey(hardcore);
 			String server = realm.getHost();
-			String url = server + "/d3/rankings/" + ((season < 0)?"era":"season") + "/" + Math.abs(season) + "/" + which;
+			String url = server + "/d3/rankings/"
+					+ ((season < 0) ? "era" : "season") + "/"
+					+ Math.abs(season) + "/" + which;
 			Window.open(url, "_blank", "");
 		}
-		
+
 	}
 
 	protected void getLeaderboard() {
-		
+
 		LeaderboardType type = getSelectedLeaderboard();
 		boolean hardcore = this.hardcore.getValue();
-		
+
 		if (type != null) {
 			String which = type.getKey(hardcore);
 
 			Integer season = getSelectedSeason();
-			
+
 			if (season != null) {
-				Service.getInstance().getLeaderboard(mainPanel.getSelectedRealm(), Math.abs(season), season < 0, which, new DefaultCallback<Leaderboard>(){
-	
-					@Override
-					protected void doOnSuccess(Leaderboard result) {
-						populateLeaders(result);
-						
-					}});
+				Service.getInstance().getLeaderboard(
+						mainPanel.getSelectedRealm(), Math.abs(season),
+						season < 0, which, new DefaultCallback<Leaderboard>() {
+
+							@Override
+							protected void doOnSuccess(Leaderboard result) {
+								populateLeaders(result);
+
+							}
+						});
 			}
 		}
-		
+
 	}
 
 	protected void populateLeaders(Leaderboard result) {
 		leaders = new ListBox();
-		
+
 		for (LeaderboardRow row : result.rows) {
-			Long rift = null;
-			Long time = null;
-			Long rank = null;
-			
-			for (LeaderboardData d : row.data) {
-				if (d.id.equals("Rank")) {
-					rank = d.number;
-				} else if (d.id.equals("RiftLevel")) {
-					rift = d.number;
-				} else if (d.id.equals("RiftTime")) {
-					time = d.timestamp;
-				}
-				
-				if ((rift != null) && (time != null) && (rank != null)) {
-					break;
-				}
-			}
-			
-			if ((rift != null) && (time != null) && (rank != null)) {
-			
-				for (Account pl : row.players) {
-					String btag = null;
-					Long heroId = null;
-					boolean isDh = false;
-					
-					for (LeaderboardData d : pl.data) {
-						if (d.id.equals("HeroClass")) {
-							if (d.string.equals("demon hunter")) {
-								isDh = true;
-							} else {
-								break;
+
+			if ((row != null) && (row.players != null)) {
+				if (row.data != null) {
+
+					Long rift = Util.getLeaderboardDataNumber(row.data,
+							"RiftLevel");
+					Long time = Util.getLeaderboardDataTimestamp(row.data,
+							"RiftTime");
+					Long rank = Util.getLeaderboardDataNumber(row.data, "Rank");
+
+					if ((rift != null) && (time != null) && (rank != null)) {
+						for (Account a : row.players) {
+
+							String clazz = Util.getLeaderboardDataString(
+									a.data, "HeroClass");
+
+							if ((clazz != null) && clazz.equals("demon hunter")) {
+
+								String btag = Util.getLeaderboardDataString(
+										a.data, "HeroBattleTag");
+								Long heroId = Util.getLeaderboardDataNumber(
+										a.data, "HeroId");
+
+								if ((btag != null) && (heroId != null)) {
+									long minutes = time / 60000L;
+									long seconds = (time - (minutes * 60000)) / 1000L;
+									String ts = NumberFormat.getFormat("00")
+											.format(minutes)
+											+ ":"
+											+ NumberFormat.getFormat("00")
+													.format(seconds);
+									String label = rank + ") Level " + rift
+											+ ": " + ts + " - " + btag;
+									leaders.addItem(label, btag + "#" + heroId);
+								}
 							}
-						} else if (d.id.equals("HeroBattleTag")) {
-							btag = d.string;
-						} else if (d.id.equals("HeroId")) {
-							heroId = d.number;
 						}
-						
-						if (isDh && (btag != null) && (heroId != null))
-							break;
-					}
-					
-					if (isDh && (btag != null) && (heroId != null)) {
-						long minutes = time / 60000L;
-						long seconds = (time - (minutes * 60000))/1000L;
-						String ts = NumberFormat.getFormat("00").format(minutes) + ":" + NumberFormat.getFormat("00").format(seconds);
-						String label = rank + ") Level " + rift + ": " + ts + " - " + btag;
-						leaders.addItem(label, btag + "#" + heroId);
 					}
 				}
 			}
 		}
-		
+
 		HorizontalPanel row = new HorizontalPanel();
 		row.setVerticalAlignment(HasVerticalAlignment.ALIGN_MIDDLE);
 		row.setSpacing(5);
-		
+
 		row.add(leaders);
-		
+
 		this.table.setWidget(this.leaderboardRow, 0, row);
 		this.table.getFlexCellFormatter().setColSpan(this.leaderboardRow, 0, 6);
-		
+
 		Anchor career = new Anchor("profile");
 		career.setHref("javascript:void(0)");
 		row.add(career);
 
-		career.addClickHandler(new ClickHandler(){
+		career.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				showCareer();
-			}});
-		
+			}
+		});
+
 		Anchor hero = new Anchor("hero");
 		hero.setHref("javascript:void(0)");
 		row.add(hero);
-		
-		hero.addClickHandler(new ClickHandler(){
+
+		hero.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				showHero();
-			}});
+			}
+		});
 
-		hero.addClickHandler(new ClickHandler(){
+		hero.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				showHero();
-			}});
+			}
+		});
 
 		Anchor paperdoll = new Anchor("paperdoll");
 		paperdoll.setHref("javascript:void(0)");
 		row.add(paperdoll);
-		
-		paperdoll.addClickHandler(new ClickHandler(){
+
+		paperdoll.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				showPaperdoll();
-			}});
+			}
+		});
 
 		Button button = new Button("Import Profile");
 		row.add(button);
-		
-		button.addClickHandler(new ClickHandler(){
+
+		button.addClickHandler(new ClickHandler() {
 
 			@Override
 			public void onClick(ClickEvent event) {
 				getHeroList();
-			}});
+			}
+		});
 	}
 
 	protected void showPaperdoll() {
@@ -269,18 +269,21 @@ public class LeaderboardPanel extends ApplicationPanel {
 		if ((realm != null) && (btag != null)) {
 			String[] split = btag.split("#");
 
-			MainPanel.openPaperdoll(realm.name(), URL.encodePathSegment(split[0]), Integer.valueOf(split[1]), Integer.valueOf(split[2]));
+			MainPanel.openPaperdoll(realm.name(),
+					URL.encodePathSegment(split[0]), Integer.valueOf(split[1]),
+					Integer.valueOf(split[2]));
 		}
 	}
 
 	protected void showHero() {
 		String btag = getSelectedAccount();
 		Realm realm = mainPanel.getSelectedRealm();
-		
+
 		if ((realm != null) && (btag != null)) {
 			String[] split = btag.split("#");
 			String server = realm.getHost();
-			String url = server + "/d3/profile/" + split[0] + "-" + split[1] + "/hero/" + split[2];
+			String url = server + "/d3/profile/" + split[0] + "-" + split[1]
+					+ "/hero/" + split[2];
 			Window.open(url, "_blank", "");
 		}
 	}
@@ -288,54 +291,56 @@ public class LeaderboardPanel extends ApplicationPanel {
 	protected void showCareer() {
 		String btag = getSelectedAccount();
 		Realm realm = mainPanel.getSelectedRealm();
-		
+
 		if ((realm != null) && (btag != null)) {
 			String[] split = btag.split("#");
 			String server = realm.getHost();
-			String url = server + "/d3/profile/" + split[0] + "-" + split[1] + "/";
+			String url = server + "/d3/profile/" + split[0] + "-" + split[1]
+					+ "/";
 			Window.open(url, "_blank", "");
 		}
 	}
 
 	protected void getHeroList() {
 		String btag = getSelectedAccount();
-		
+
 		if (btag != null) {
 			String[] split = btag.split("#");
-			mainPanel.importProfile(split[0], split[1], Integer.parseInt(split[2]));
+			mainPanel.importProfile(split[0], split[1],
+					Integer.parseInt(split[2]));
 		}
 	}
 
 	private String getSelectedAccount() {
-		
+
 		int i = leaders.getSelectedIndex();
-		
+
 		if (i < 0)
 			return null;
-		
+
 		return leaders.getValue(i);
 	}
 
 	private Integer getSelectedSeason() {
 		int i = this.seasonList.getSelectedIndex();
-		
+
 		if (i < 0)
 			return null;
-		
+
 		String value = seasonList.getValue(i);
-		
+
 		return Integer.parseInt(value);
 	}
 
 	private LeaderboardType getSelectedLeaderboard() {
-		
+
 		int i = this.leaderboard.getSelectedIndex();
-		
+
 		if (i < 0)
 			return null;
 
 		String value = leaderboard.getValue(i);
-		
+
 		return LeaderboardType.valueOf(value);
 	}
 
@@ -343,15 +348,15 @@ public class LeaderboardPanel extends ApplicationPanel {
 	public void onLoad() {
 		if (this.seasons == null) {
 			Realm realm = mainPanel.getSelectedRealm();
-			
+
 			Service.getInstance().getSeasonEraIndex(realm,
 					new DefaultCallback<SeasonIndex>() {
-	
+
 						@Override
 						protected void doOnSuccess(SeasonIndex result) {
 							populateSeasonIndex(result);
 						}
-	
+
 					});
 		}
 	}
@@ -373,25 +378,26 @@ public class LeaderboardPanel extends ApplicationPanel {
 			s.season = i;
 			list.add(s);
 		}
-		
+
 		for (SeasonHolder s : list) {
 			seasonList.addItem(s.toString(), s.value());
 		}
-		
-		seasonList.setSelectedIndex(list.size() -1);
+
+		seasonList.setSelectedIndex(list.size() - 1);
 	}
-	
+
 	private class SeasonHolder {
 		public Integer season;
 		public Integer era;
-		
+
 		@Override
 		public String toString() {
 			return (era != null) ? ("Era " + era) : ("Season " + season);
 		}
 
 		public String value() {
-			return (era != null) ? String.valueOf(-era) : String.valueOf(season);
+			return (era != null) ? String.valueOf(-era) : String
+					.valueOf(season);
 		}
 	}
 }
